--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/parser": "^7.27.3",
     "@babel/types": "^7.27.3",
     "@types/babel__traverse": "^7.20.7",
+    "canvas": "^3.1.0",
     "chalk": "^5.4.1"
   }
 }
